[project]
name = "spotify_to_ytmusic"
description = "Transfer Spotify playlists to YouTube Music"
requires-python = ">=3.9"
authors=[{name = "sigma67", email= "sigma67.github@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ytmusicapi>=1.8.2",
    "spotipy>=2.23.0",
    "platformdirs>=3.2",
]
dynamic = ["version", "readme"]

[project.scripts]
spotify_to_ytmusic = "spotify_to_ytmusic.main:main"

[project.urls]
homepage = "https://github.com/sigma67/spotify_to_ytmusic"
repository = "https://github.com/sigma67/spotify_to_ytmusic"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.example", "**.py"]

[tool.isort]
profile = "hug"
src_paths = ["spotify_to_ytmusic"]

[tool.black]
line-length = 99

[tool.coverage.run]
command_line = "-m unittest discover tests"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "coverage>=7.5.3",
]
