[project]
name = "spotify_to_ytmusic"
description = "Transfer Spotify playlists to YouTube Music"
requires-python = ">=3.9"
authors=[{name = "sigma67", email= "sigma67.github@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ytmusicapi>=1.9.1",
    "spotipy>=2.23.0",
    "platformdirs>=3.2",
]
dynamic = ["version", "readme"]

[project.scripts]
spotify_to_ytmusic = "spotify_to_ytmusic.main:main"

[project.urls]
homepage = "https://github.com/sigma67/spotify_to_ytmusic"
repository = "https://github.com/sigma67/spotify_to_ytmusic"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.example", "**.py"]

[tool.isort]
profile = "hug"
src_paths = ["spotify_to_ytmusic"]

[tool.black]
line-length = 99

[tool.coverage.run]
command_line = "-m unittest discover tests"

[tool.pdm]
distribution = true

[tool.mypy]
files = [
    "spotify_to_ytmusic/"
]
mypy_path = "spotify_to_ytmusic"

[[tool.mypy.overrides]]
module = ['ytmusicapi.*', 'spotipy.*']
ignore_missing_imports = true

[dependency-groups]
test = [
    "coverage>=7.5.3"
]
lint = [
    "ruff>=0.9.2",
    "mypy[install-types]>=1.14.1",
]
