[project]
name = "spotify_to_ytmusic"
description = "Transfer Spotify playlists to YouTube Music"
requires-python = ">=3.10"
authors=[{name = "sigma67", email= "sigma67.github@gmail.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ytmusicapi>=1.11.0rc1",
    "spotipy>=2.25.0",
    "platformdirs>=3.2",
]
dynamic = ["version", "readme"]

[project.scripts]
spotify_to_ytmusic = "spotify_to_ytmusic.main:main"

[project.urls]
homepage = "https://github.com/sigma67/spotify_to_ytmusic"
repository = "https://github.com/sigma67/spotify_to_ytmusic"

[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools]
include-package-data=false

[tool.setuptools.package-data]
"*" = ["**.example", "**.py"]


###############
# DEVELOPMENT #
###############

[tool.pytest.ini_options]
python_functions = "test_*"
testpaths = ["tests"]
addopts = "--verbose --cov --junitxml=junit.xml"

[tool.ruff.lint]
ignore = [ "F403", "F405", "F821", "E731", "PTH123" ]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "PTH", # pathlib
    "INP", # implicit namespace package
]

[tool.mypy]
files = [
    "spotify_to_ytmusic/"
]
mypy_path = "spotify_to_ytmusic"

[[tool.mypy.overrides]]
module = ['spotipy.*']
ignore_missing_imports = true

[dependency-groups]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]
lint = [
    "ruff>=0.11.7",
    "mypy[install-types]>=1.14.1",
]
